updated readme to include languages

--- a/README
+++ b/README
@@ -4,6 +4,8 @@
 
     Collection of interesting problems and algorithms to solve them.
 
+    Languages: Julia, Python
+
 
 Problem List
 ============
