--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 
     Collection of interesting problems and algorithms to solve them.
 
-    Languages: Julia, Python
+    Languages: Julia, Python, C++
 
 
 Problem List
